--- a/src/components/ShopDetails/ShopDetails.css
+++ b/src/components/ShopDetails/ShopDetails.css
@@ -1,8 +1,128 @@
 .ShopPage {
-    justify-content: center;
-    align-items: center;
-    padding: 40px;
-    margin: auto;
+    padding: 2rem;
+    background-color: #f4f4f4;
+    font-family: 'Arial', sans-serif;
+    color: #333;
     margin-top: 70px;
-    margin-bottom: 70px;
+    margin-bottom: 50px;
+}
+
+.details-card {
+    background-color: transparent;
+    box-shadow: none;
+    border: none;
+    border-radius: 0;
+    width: 100%;
+}
+
+.shop-wrapper {
+    width: 100%;
+    border-radius: 16px;
+    box-shadow: 0 4px 12px rgba(0, 0, 0, 0.08);
+    background-color: #ffffff;
+    overflow: hidden;
+}
+
+.cardTitle {
+    margin-top: -5px;
+    font-size: 9em;
+    font-weight: 300;
+    font-family: "Instrument Serif", serif;
+    line-height: 1;
+}
+
+.product-description {
+    font-size: 2em;
+    font-weight: 100;
+    width: 70%;
+    margin-top: 10px;
+    line-height: 1.2;
+}
+
+.cart-button {
+    background-color: #FF5733;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 10px;
+    padding: 10px 20px;
+}
+
+.cart-button h4 {
+    font-size: 1em;
+    margin: 0;
+}
+
+.cart-button {
+    background-color: black;
+    border: none;
+}
+
+.cart-button:hover {
+    background-color: #FF5733;
+    border: none;
+}
+
+.details-card .edit-button i {
+    color: white;
+}
+
+
+@media (max-width: 991.98px) {
+
+    .cardTitle {
+        font-size: 6em;
+    }
+
+    .product-description {
+        font-size: 1.5em;
+        width: 80%;
+    }
+
+    .cart-button {
+        padding: 10px;
+    }
+
+}
+
+@media (max-width: 480px) {
+    .cardTitle {
+        font-size: 4em;
+    }
+
+    .product-description {
+        font-size: 1em;
+        width: 100%;
+    }
+
+    .cart-button {
+        padding: 6px 12px;
+    }
+
+    .product-details {
+        font-size: 0.9em;
+    }
+}
+
+.little-message-shop {
+    position: relative;
+    top: 0;
+    width: 100%;
+    text-align: center;
+}
+
+.little-message-shop h4 {
+    font-size: 0.8em
+}
+
+.about-title-shop {
+    margin-top: 0;
+    text-align: center;
+    font-family: "Instrument Serif", serif;
+    font-weight: 400;
+    font-variation-settings: normal;
+}
+
+.about-title-shop h1 {
+    font-size: 6em;
 }
