--- a/src/pages/AdminPage/AdminPage.css
+++ b/src/pages/AdminPage/AdminPage.css
@@ -2,10 +2,14 @@
     flex-direction: column;
     padding: 2rem;
     background-color: #f4f4f4;
-    font-family: 'Arial', sans-serif;
     color: #333;
     margin-top: 70px;
     margin-bottom: 50px;
+    font-family: "Instrument Serif", serif;
+}
+
+.titleBold {
+    font-weight: bold;
 }
 
 .ag-select:not(.ag-cell-editor, .ag-label-align-top) {
@@ -16,4 +20,56 @@
     .ag-paging-row-summary-panel {
         display: none !important;
     }
+}
+
+.little-message-shop {
+    position: relative;
+    top: 0;
+    width: 100%;
+    text-align: center;
+}
+
+.little-message-shop h4 {
+    font-size: 0.8em
+}
+
+.about-title-shop {
+    margin-top: 0;
+    text-align: center;
+    font-family: "Instrument Serif", serif;
+    font-weight: 400;
+    font-variation-settings: normal;
+}
+
+.about-title-shop h1 {
+    font-size: 6em;
+}
+
+@media (max-width: 1200px) {
+    .about-title-shop h1 {
+        font-size: 5em;
+    }
+}
+
+@media (max-width: 992px) {
+    .about-title-shop h1 {
+        font-size: 4em;
+    }
+}
+
+@media (max-width: 768px) {
+    .about-title-shop h1 {
+        font-size: 3em;
+    }
+}
+
+@media (max-width: 576px) {
+    .about-title-shop h1 {
+        font-size: 2em;
+    }
+}
+
+.ag-theme-alpine {
+    font-family: "Instrument Serif", serif;
+    font-weight: 300;
 }
